# PESMaker_litupVer

./: .gitignore  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
PESMaker_AIMD_Toolkit/: README.md  aimd_fps_to_nep.py  aimd_interval_to_nep.py  merge_aimd_train_xyz.py
docs/: ACTIVE_LEARNING_WORKFLOW.md  ARCHITECTURE.md  CODE_LOGIC.md  PROJECT_BRIEF.md  ROADMAP.md  index.md  installation.md  releasing.md  usage.md
docs/api/: cli.md
docs/commands/: collect.md  generate.md  index.md  init.md  next.md  plot.md  sample-setup.md  scf-setup.md  select.md  status.md  submit.md  train-setup.md  train.md  validate.md
docs/examples/: minimal-yaml.md
docs/theory/: farthest-point-sampling.md  perturbation.md
examples/: perturb.yaml  pesmaker.yaml  te_defect_md.yaml  te_md_fps_minimal.yaml
examples/templates/gpumd/: run.in
examples/templates/lammps/: in.run_mace_npt  in.run_mace_npt_d3  lammps.sh
examples/templates/sbatch/: gpumd.sh  nep.sh  vasp.sh  vasp_cpu_36.sh
examples/templates/vasp/: INCAR
src/pesmaker/: __init__.py  __main__.py  artifacts.py  cli.py  cli_next.py  results.py
src/pesmaker/config/: __init__.py  io.py  schema.py
src/pesmaker/dataset/: __init__.py  extxyz.py
src/pesmaker/generators/: __init__.py  structures.py
src/pesmaker/jobs/: __init__.py  resources.py  scripts.py  submit.py
src/pesmaker/labelers/: __init__.py  vasp.py
src/pesmaker/parsers/: __init__.py  ase.py  vasp.py
src/pesmaker/plot/: nep.py
src/pesmaker/samplers/: __init__.py  gpumd.py  lammps_mace.py  selection.py
src/pesmaker/structures/: __init__.py  defects.py  io.py  perturb.py
src/pesmaker/trainers/: __init__.py  nep.py
src/pesmaker/workflow/: __init__.py  generate.py  next.py  plan.py  stages.py  state.py
tests/: test_aimd_fps_to_nep_toolkit.py  test_aimd_interval_to_nep_toolkit.py  test_cli_generate.py  test_config.py  test_job_scripts.py  test_merge_aimd_train_xyz_toolkit.py  test_structures.py  test_submit_background.py  test_training_nep.py  test_workflow_next.py  test_workflow_stages.py
