[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pesmaker"
dynamic = ["version"]
description = "Foundation-potential-assisted workflow for application-oriented machine-learning potential dataset generation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PESMaker developers" }
]
maintainers = [
  { name = "Ting Liang", email = "liangting.zj@gmail.com" }
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE"]
keywords = [
  "atomistic simulation",
  "machine-learned interatomic potentials",
  "MACE",
  "GPUMD",
  "VASP"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "ase>=3.23",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "seaborn>=0.13"
]

[project.optional-dependencies]
atomistic = [
  "pymatgen>=2024.5"
]
selection = [
  "calorine>=3.3"
]
mace = [
  "mace-torch>=0.3"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]
release = [
  "build>=1.2",
  "twine>=5.1"
]

[project.scripts]
pesmaker = "pesmaker.cli:main"

[project.urls]
Homepage = "https://github.com/Tingliangstu/PESMaker"
Documentation = "https://Tingliangstu.github.io/PESMaker/"
Repository = "https://github.com/Tingliangstu/PESMaker.git"
Issues = "https://github.com/Tingliangstu/PESMaker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "pesmaker.__version__" }

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]

